add_executable(5.3 5.3.cpp)
add_executable(5.5 5.5.cpp)
add_executable(5.6 5.6.cpp)
add_executable(5.9 5.9.cpp)
add_executable(5.10 5.10.cpp)
add_executable(5.11 5.11.cpp)
add_executable(5.12 5.12.cpp)
add_executable(5.14 5.14.cpp)
add_executable(5.17 5.17.cpp)
add_executable(5.19 5.19.cpp)
add_executable(5.20 5.20.cpp)
add_executable(5.21 5.21.cpp)
add_executable(5.23 5.23.cpp)
add_executable(5.24 5.24.cpp)
add_executable(5.25 5.25.cpp)
