add_executable(6.3 6.3.cpp)
add_executable(6.4 6.4.cpp)
add_executable(6.5 6.5.cpp)
add_executable(6.7 6.7.cpp)

add_library(Chapter6 INTERFACE)
target_include_directories(Chapter6 INTERFACE 6.8)

add_executable(6.9 6.9/fact.cc 6.9/factMain.cc)
target_link_libraries(6.9 PUBLIC Chapter6)

add_executable(6.10 6.10.cpp)
add_executable(6.11 6.11.cpp)
add_executable(6.12 6.12.cpp)
add_executable(6.21 6.21.cpp)
add_executable(6.23 6.23.cpp)
add_executable(6.25 6.25.cpp)
add_executable(6.26 6.26.cpp)
add_executable(6.27 6.27.cpp)
add_executable(6.33 6.33.cpp)
add_executable(6.38 6.38.cpp)
add_executable(6.42 6.42.cpp)
add_executable(6.47_6.33 6.47/6.33.cpp)
add_executable(6.51 6.51.cpp)
add_executable(6.55 6.55.cpp)
add_executable(6.56 6.56.cpp)
